# LANChat

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  client_main.cpp  conanfile.py  server_main.cpp
Client/: client.cpp  client.h
Client/include/: client.h  client_mainwindow.h
Client/src/: client.cpp  client_mainwindow.cpp
QtWindow/: client_mainwindow.cpp  client_mainwindow.h  mainwindow.cpp  mainwindow.h  server_mainwindow.cpp  server_mainwindow.h
Server/: server.cpp  server.h  server_main.cpp
Server/include/: server.h  server_mainwindow.h
Server/src/: server.cpp  server_mainwindow.cpp
docs/: CMakeLists.txt  Doxyfile
